// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EarnLendingBalance does renders earnings for output tokens 1`] = `
<View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 16,
        "justifyContent": "space-between",
        "paddingTop": 14,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#3c4d9d0f",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
      testID="withdraw-button"
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Withdraw
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "paddingHorizontal": 16,
        "paddingTop": 16,
      }
    }
  >
    <View>
      <View
        style={
          {
            "paddingTop": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Bold",
              "fontSize": 18,
              "letterSpacing": 0,
              "lineHeight": 24,
              "paddingBottom": 8,
            }
          }
        >
          Your earnings
        </Text>
        <View>
          <View
            style={
              {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingVertical": 8,
              }
            }
          >
            <View
              style={
                {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Annual rate
              </Text>
              <TouchableOpacity
                accessibilityLabel="Annual rate tooltip"
                accessibilityRole="button"
                accessible={true}
                activeOpacity={1}
                disabled={false}
                hitSlop={
                  {
                    "bottom": 15,
                    "left": 15,
                    "right": 15,
                    "top": 15,
                  }
                }
                onPress={[Function]}
                onPressIn={[Function]}
                onPressOut={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderRadius": 8,
                    "height": 24,
                    "justifyContent": "center",
                    "opacity": 1,
                    "width": 24,
                  }
                }
                testID="annual-rate-tooltip"
              >
                <SvgMock
                  color="#b7bbc8"
                  fill="currentColor"
                  height={16}
                  name="Info"
                  style={
                    {
                      "height": 16,
                      "width": 16,
                    }
                  }
                  width={16}
                />
              </TouchableOpacity>
            </View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#457a39",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              5.2
               APR
            </Text>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingVertical": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Estimated annual earnings
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "flex-end",
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                $10.34
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist Medium",
                    "fontSize": 14,
                    "letterSpacing": 0,
                    "lineHeight": 22,
                  }
                }
              >
                10.34 ADAI
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`EarnLendingBalance renders balance and buttons when user has lending positions 1`] = `
<View>
  <TouchableOpacity
    disabled={false}
    onLongPress={[Function]}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 64,
      }
    }
    testID="asset-ADAI"
  >
    <View
      onLayout={[Function]}
      style={
        {
          "alignSelf": "center",
          "position": "relative",
        }
      }
      testID="badge-wrapper-badge"
    >
      <View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 16,
              "height": 32,
              "overflow": "hidden",
              "width": 32,
            }
          }
          testID="receipt-token-balance-asset-logo"
        >
          <Image
            onError={[Function]}
            resizeMode="contain"
            source={
              {
                "uri": "",
              }
            }
            style={
              {
                "flex": 1,
                "height": undefined,
                "width": undefined,
              }
            }
            testID="token-avatar-image"
          />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "bottom": 0,
            "height": 0,
            "justifyContent": "center",
            "position": "absolute",
            "right": 0,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignItems": "center",
              "aspectRatio": 1,
              "height": "50%",
              "justifyContent": "center",
              "maxHeight": 24,
              "minHeight": 8,
              "opacity": 0,
            }
          }
          testID="badgenetwork"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderColor": "#ffffff",
                "borderRadius": 8,
                "borderWidth": 2,
                "height": 32,
                "justifyContent": "center",
                "overflow": "hidden",
                "shadowColor": "#0000001a",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 4,
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
                "width": 32,
              }
            }
          >
            <Image
              onError={[Function]}
              resizeMode="contain"
              source={1}
              style={
                {
                  "height": 32,
                  "width": 32,
                }
              }
              testID="network-avatar-image"
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "flex": 1,
          "justifyContent": "center",
          "marginLeft": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
        testID="receipt-token-label"
      >
        ADAI
      </Text>
      <View>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#457a39",
              "fontFamily": "Geist Medium",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          +5.20%
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "flexShrink": 0,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
        testID="balance-test-id"
      >
        $76.00
      </Text>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#686e7d",
            "fontFamily": "Geist Medium",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 22,
            "paddingHorizontal": 0,
          }
        }
        testID="secondary-balance-test-id"
      >
        32.05 ADAI
      </Text>
    </View>
  </TouchableOpacity>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 16,
        "justifyContent": "space-between",
        "paddingTop": 14,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#3c4d9d0f",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
      testID="withdraw-button"
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Withdraw
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#3c4d9d0f",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
      testID="deposit-button"
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Deposit more
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;
